version 0.8 - xxx
 . Actions: Added BezierBy action (issue #313)
 . Actions: improved performance when running Actions (issue #301)
 . All: removed deprecated classes/methods (issue #326)
 . AtlasSprite: supports flipX and flipY properties (issue #343)
 . BitmapFontAtlas: new features (issue #317)
 . CocosNode: actions don't retain the target (issue #150)
 . CocosNode: support real openGL Z vertex (issue #355)
 . CocosNode: transformation matrix is cached (issue #263)
 . CocosNode: faster transforming of local/world coordinates (issue #263)
 . CocosNode: anchorPoint is relative (0,0) to (1,1) (issue #303)
 . Demos: Added PerformanceParticleTest (issue #331)
 . Director: supports PortraitUpsideDown and Right orientation (issue #351)
 . LabelAtlas: don't render in subpixel (issue #135)
 . Menu: All MenuItems supports CocosNodeRGBA protocol (issue #347)
 . Menu: Support for BitmapFontAtlas (or any other Label) (issue #365)
 . ParallaxNode: parallax code refactored (issue #358)
 . Particles: Added QuadParticleSystem. renamed ParticleSystem to PointParticleSystem (issue #245)
 . Particles: added support for endSize and endSizeVar (issue #241)
 . Particles: added support for start/end/var spinning (issue #335)
 . Particles: support for World/Local coordinates (issue #241)
 . Primitives: added bezier path support (issue #380)
 . Texture2D: new alias/antialias API (issue #226)
 . Texture2D: supports 16-bit textures RGB4 and RGB5A1 (default is RGBA4444) (issue #356)
 . Texture2D: blending mode varies according to texture (issue #125)
 . TextureAtlas: uses interleaved vertex array (issue #359)
 . TextureMgr: added method that removes unused textures (issue #117)
 . Transition: onEnterTransitionDidFinsih added. OnExit and onEnter only once (issue #172)
 . Types: types follows OpenGL "standards" (issue #360)
 . Touch Events: new touch dispatcher (issue #211)
 . Touch Events: menu uses new touch dispatcher (issue #362)

 version 0.7.3 - 18-May-2009